[package]
name = "vst3-sys"
version = "0.1.0"
authors = ["Mike Hilgendorf <mike@hilgendorf.audio>", "Mirko Covizzi"]
description = """
Pure Rust bindings to the VST3 APIs, based on COM. 
"""
edition = "2018"

[dependencies]
vst3-com = { path = "./com" }
bitflags = "1.2.0"

[workspace]
members = ["examples/passthru", "com", "com/macros", "com/macros/support"]
