[package]
name = "vst3-com-macros"
version = "0.2.0"
authors = ["Microsoft Corp."]
edition = "2018"
description = """
Forked from com-rs

COM crate macros
"""
license = "MIT"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0.13"
vst3-com = { path = ".." }

[dependencies]
syn = { version = "1.0.5", features = ["full"] }
quote = "1.0.3"
proc-macro2 = "1.0.1"
vst3-com-macros-support = { path = "support" }
