[package]
name = "passthru"
version = "0.1.0"
authors = ["Mike Hilgendorf <mike@hilgendorf.audio>"]
edition = "2018"
description = """
Example/smoke test to verify the API bindings work, and to demonstrate
how the APIs are intended to be used without macros. 
"""

[lib]
crate-type = ["cdylib"]

[dependencies]
vst3-sys = { path = "../../"}
vst3-com = { path = "../../com" }
log = "0.4"
simple_logger = "1.6.0"
lazy_static = "1.4.0"