[package]
name = "vst3-com-macros-support"
version = "0.2.0"
authors = ["Microsoft Corp."]
edition = "2018"
description = """
Forked from com-rs

Support library for COM crate macros
"""
license = "MIT"

[dependencies]
syn = { version = "1.0.5", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.1"
